--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -1,1 +1,542 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# VacationPy\n",
+    "----\n",
+    "\n",
+    "#### Note\n",
+    "* Keep an eye on your API usage. Use https://developers.google.com/maps/reporting/gmp-reporting as reference for how to monitor your usage and billing.\n",
+    "\n",
+    "* Instructions have been included for each segment. You do not have to follow them exactly, but they are included to help you think through the steps."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "conda install -c conda-forge gmaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dependencies and Setup\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import requests\n",
+    "import gmaps\n",
+    "import os\n",
+    "\n",
+    "# Import API key\n",
+    "from api_keys import g_key"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Store Part I results into DataFrame\n",
+    "* Load the csv exported in Part I to a DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>clouds</th>\n",
+       "      <th>wind</th>\n",
+       "      <th>lon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tasiilaq</td>\n",
+       "      <td>65.6145</td>\n",
+       "      <td>37.40</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>11.50</td>\n",
+       "      <td>-37.6368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>bajo baudo</td>\n",
+       "      <td>19.7297</td>\n",
+       "      <td>75.07</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>6.91</td>\n",
+       "      <td>-155.0900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>hilo</td>\n",
+       "      <td>18.0858</td>\n",
+       "      <td>68.00</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.97</td>\n",
+       "      <td>-15.9785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>nouakchott</td>\n",
+       "      <td>29.0361</td>\n",
+       "      <td>59.92</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.34</td>\n",
+       "      <td>114.5636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>yining</td>\n",
+       "      <td>-53.1500</td>\n",
+       "      <td>48.09</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>13.80</td>\n",
+       "      <td>-70.9167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>605</th>\n",
+       "      <td>santa cruz</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>606</th>\n",
+       "      <td>alto araguaia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>607</th>\n",
+       "      <td>ola</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>608</th>\n",
+       "      <td>west bay</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>609</th>\n",
+       "      <td>utiroa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>610 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              city      lat   temp  humidity  clouds   wind       lon\n",
+       "0         tasiilaq  65.6145  37.40      81.0    90.0  11.50  -37.6368\n",
+       "1       bajo baudo  19.7297  75.07      78.0    90.0   6.91 -155.0900\n",
+       "2             hilo  18.0858  68.00      77.0     0.0  14.97  -15.9785\n",
+       "3       nouakchott  29.0361  59.92      95.0   100.0   1.34  114.5636\n",
+       "4           yining -53.1500  48.09      87.0    90.0  13.80  -70.9167\n",
+       "..             ...      ...    ...       ...     ...    ...       ...\n",
+       "605     santa cruz      NaN    NaN       NaN     NaN    NaN       NaN\n",
+       "606  alto araguaia      NaN    NaN       NaN     NaN    NaN       NaN\n",
+       "607            ola      NaN    NaN       NaN     NaN    NaN       NaN\n",
+       "608       west bay      NaN    NaN       NaN     NaN    NaN       NaN\n",
+       "609         utiroa      NaN    NaN       NaN     NaN    NaN       NaN\n",
+       "\n",
+       "[610 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_v_py = pd.read_csv('weather.csv')\n",
+    "weather_v_py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Humidity Heatmap\n",
+    "* Configure gmaps.\n",
+    "* Use the Lat and Lng as locations and Humidity as the weight.\n",
+    "* Add Heatmap layer to map."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmaps.configure(api_key=g_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ff74ff67eece45d986cee36d4bb91ddb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "weather_v_py = weather_v_py.dropna()\n",
+    "city = weather_v_py[\"city\"]\n",
+    "locations = weather_v_py[[\"lat\", \"lon\"]].astype(float)\n",
+    "humidity = weather_v_py[\"humidity\"]\n",
+    "\n",
+    "fig = gmaps.figure()\n",
+    "m = gmaps.Map()\n",
+    "\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity, \n",
+    "                                 dissipating=False, max_intensity=100)\n",
+    "\n",
+    "fig.add_layer(heat_layer)\n",
+    "\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create new DataFrame fitting weather criteria\n",
+    "* Narrow down the cities to fit weather conditions.\n",
+    "* Drop any rows will null values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>clouds</th>\n",
+       "      <th>wind</th>\n",
+       "      <th>lon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>sistranda</td>\n",
+       "      <td>-12.7336</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.44</td>\n",
+       "      <td>45.2042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>castro</td>\n",
+       "      <td>-20.7377</td>\n",
+       "      <td>75.65</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.87</td>\n",
+       "      <td>116.8463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308</th>\n",
+       "      <td>karanja</td>\n",
+       "      <td>-15.1961</td>\n",
+       "      <td>77.59</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.34</td>\n",
+       "      <td>12.1522</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>337</th>\n",
+       "      <td>namibe</td>\n",
+       "      <td>27.2167</td>\n",
+       "      <td>78.46</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.09</td>\n",
+       "      <td>77.4833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>lhokseumawe</td>\n",
+       "      <td>20.5169</td>\n",
+       "      <td>79.54</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.49</td>\n",
+       "      <td>-13.0499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>444</th>\n",
+       "      <td>cardston</td>\n",
+       "      <td>26.7292</td>\n",
+       "      <td>75.20</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.20</td>\n",
+       "      <td>33.9365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>512</th>\n",
+       "      <td>hay river</td>\n",
+       "      <td>38.4362</td>\n",
+       "      <td>75.15</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.40</td>\n",
+       "      <td>57.4316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>529</th>\n",
+       "      <td>vangaindrano</td>\n",
+       "      <td>22.9167</td>\n",
+       "      <td>70.92</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.82</td>\n",
+       "      <td>96.5000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             city      lat   temp  humidity  clouds  wind       lon\n",
+       "98      sistranda -12.7336  78.80      89.0     0.0  3.44   45.2042\n",
+       "160        castro -20.7377  75.65      49.0     0.0  7.87  116.8463\n",
+       "308       karanja -15.1961  77.59      65.0     0.0  8.34   12.1522\n",
+       "337        namibe  27.2167  78.46      12.0     0.0  4.09   77.4833\n",
+       "364   lhokseumawe  20.5169  79.54      18.0     0.0  3.49  -13.0499\n",
+       "444      cardston  26.7292  75.20      60.0     0.0  6.20   33.9365\n",
+       "512     hay river  38.4362  75.15      28.0     0.0  6.40   57.4316\n",
+       "529  vangaindrano  22.9167  70.92      53.0     0.0  2.82   96.5000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df = weather_v_py.loc[(weather_v_py['temp'] < 80) & (weather_v_py['temp'] > 70) & (weather_v_py['wind'] < 10) & (weather_v_py['clouds'] == 0)]\n",
+    "new_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hotel Map\n",
+    "* Store into variable named `hotel_df`.\n",
+    "* Add a \"Hotel Name\" column to the DataFrame.\n",
+    "* Set parameters to search for hotels with 5000 meters.\n",
+    "* Hit the Google Places API for each city's coordinates.\n",
+    "* Store the first Hotel result into the DataFrame.\n",
+    "* Plot markers on top of the heatmap."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NOTE: Do not change any of the code in this cell\n",
+    "\n",
+    "# Using the template add the hotel marks to the heatmap\n",
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "</dl>\n",
+    "\"\"\"\n",
+    "# Store the DataFrame Row\n",
+    "# NOTE: be sure to update with your DataFrame name\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
+    "locations = hotel_df[[\"Lat\", \"Lng\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add marker layer ontop of heat map\n",
+    "\n",
+    "\n",
+    "# Display figure\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python [conda env:PythonData] *",
+   "language": "python",
+   "name": "conda-env-PythonData-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
