--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -446,23 +446,395 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\vasu0\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n",
+      "C:\\Users\\vasu0\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  after removing the cwd from sys.path.\n",
+      "C:\\Users\\vasu0\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving Results for Index 98 \n",
+      "Closest hotel is Koungou.\n",
+      "------------\n",
+      "Retrieving Results for Index 160 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\vasu0\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\indexing.py:966: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.obj[item] = s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Closest hotel is Karratha.\n",
+      "------------\n",
+      "Retrieving Results for Index 308 \n",
+      "Closest hotel is Namibe.\n",
+      "------------\n",
+      "Retrieving Results for Index 337 \n",
+      "Closest hotel is Bharatpur.\n",
+      "------------\n",
+      "Retrieving Results for Index 364 \n",
+      "Closest hotel is Atar.\n",
+      "------------\n",
+      "Retrieving Results for Index 444 \n",
+      "Closest hotel is Safaga.\n",
+      "------------\n",
+      "Retrieving Results for Index 512 \n",
+      "Closest hotel is Baharly.\n",
+      "------------\n",
+      "Retrieving Results for Index 529 \n",
+      "Closest hotel is Mogok.\n",
+      "------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "hotel_df = new_df\n",
+    "hotel_df\n",
+    "hotel_df['Hotel Name'] = \"\"\n",
+    "hotel_df['hotel lat'] = \"\"\n",
+    "hotel_df['hotel lon'] = \"\"\n",
+    "\n",
+    "# find the closest hotel of each type to coordinates\n",
+    "\n",
+    "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "\n",
+    "# use iterrows to iterate through pandas dataframe\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "\n",
+    "    lat = row['lat']\n",
+    "    lon = row['lon']\n",
+    "    params = {\n",
+    "    \"location\": str(lat) + \",\" + str(lon),\n",
+    "    \"radius\": \"5000\",\n",
+    "    \"type\": \"hotel\",\n",
+    "    \"key\": g_key,\n",
+    "    }\n",
+    "\n",
+    "    # assemble url and make API request\n",
+    "    print(f\"Retrieving Results for Index {index} \")\n",
+    "    response = requests.get(base_url, params=params).json()\n",
+    "    \n",
+    "    # extract results\n",
+    "    results = response['results']\n",
+    "    #print(f\"The Google Places API responded with: {results}.\")\n",
+    "    try:\n",
+    "        print(f\"Closest hotel is {results[0]['name']}.\")\n",
+    "        \n",
+    "        hotel_df.loc[index, 'Hotel Name'] = results[0]['name']\n",
+    "        hotel_df.loc[index, 'hotel lat'] = results[0]['geometry']['location']['lat']\n",
+    "        hotel_df.loc[index, 'hotel lon'] = results[0]['geometry']['location']['lng']\n",
+    "        \n",
+    "    except (KeyError, IndexError):\n",
+    "        print(\"Missing field/result... skipping.\")\n",
+    "        \n",
+    "    print(\"------------\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>clouds</th>\n",
+       "      <th>wind</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "      <th>hotel lat</th>\n",
+       "      <th>hotel lon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>sistranda</td>\n",
+       "      <td>-12.7336</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.44</td>\n",
+       "      <td>45.2042</td>\n",
+       "      <td>Koungou</td>\n",
+       "      <td>-12.7368</td>\n",
+       "      <td>45.2068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>castro</td>\n",
+       "      <td>-20.7377</td>\n",
+       "      <td>75.65</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.87</td>\n",
+       "      <td>116.8463</td>\n",
+       "      <td>Karratha</td>\n",
+       "      <td>-20.7337</td>\n",
+       "      <td>116.845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308</th>\n",
+       "      <td>karanja</td>\n",
+       "      <td>-15.1961</td>\n",
+       "      <td>77.59</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.34</td>\n",
+       "      <td>12.1522</td>\n",
+       "      <td>Namibe</td>\n",
+       "      <td>-15.1978</td>\n",
+       "      <td>12.1576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>337</th>\n",
+       "      <td>namibe</td>\n",
+       "      <td>27.2167</td>\n",
+       "      <td>78.46</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.09</td>\n",
+       "      <td>77.4833</td>\n",
+       "      <td>Bharatpur</td>\n",
+       "      <td>27.2152</td>\n",
+       "      <td>77.503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>lhokseumawe</td>\n",
+       "      <td>20.5169</td>\n",
+       "      <td>79.54</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.49</td>\n",
+       "      <td>-13.0499</td>\n",
+       "      <td>Atar</td>\n",
+       "      <td>20.5073</td>\n",
+       "      <td>-13.053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>444</th>\n",
+       "      <td>cardston</td>\n",
+       "      <td>26.7292</td>\n",
+       "      <td>75.20</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.20</td>\n",
+       "      <td>33.9365</td>\n",
+       "      <td>Safaga</td>\n",
+       "      <td>26.75</td>\n",
+       "      <td>33.936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>512</th>\n",
+       "      <td>hay river</td>\n",
+       "      <td>38.4362</td>\n",
+       "      <td>75.15</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.40</td>\n",
+       "      <td>57.4316</td>\n",
+       "      <td>Baharly</td>\n",
+       "      <td>38.4362</td>\n",
+       "      <td>57.4288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>529</th>\n",
+       "      <td>vangaindrano</td>\n",
+       "      <td>22.9167</td>\n",
+       "      <td>70.92</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.82</td>\n",
+       "      <td>96.5000</td>\n",
+       "      <td>Mogok</td>\n",
+       "      <td>22.9247</td>\n",
+       "      <td>96.5063</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             city      lat   temp  humidity  clouds  wind       lon  \\\n",
+       "98      sistranda -12.7336  78.80      89.0     0.0  3.44   45.2042   \n",
+       "160        castro -20.7377  75.65      49.0     0.0  7.87  116.8463   \n",
+       "308       karanja -15.1961  77.59      65.0     0.0  8.34   12.1522   \n",
+       "337        namibe  27.2167  78.46      12.0     0.0  4.09   77.4833   \n",
+       "364   lhokseumawe  20.5169  79.54      18.0     0.0  3.49  -13.0499   \n",
+       "444      cardston  26.7292  75.20      60.0     0.0  6.20   33.9365   \n",
+       "512     hay river  38.4362  75.15      28.0     0.0  6.40   57.4316   \n",
+       "529  vangaindrano  22.9167  70.92      53.0     0.0  2.82   96.5000   \n",
+       "\n",
+       "    Hotel Name hotel lat hotel lon  \n",
+       "98     Koungou  -12.7368   45.2068  \n",
+       "160   Karratha  -20.7337   116.845  \n",
+       "308     Namibe  -15.1978   12.1576  \n",
+       "337  Bharatpur   27.2152    77.503  \n",
+       "364       Atar   20.5073   -13.053  \n",
+       "444     Safaga     26.75    33.936  \n",
+       "512    Baharly   38.4362   57.4288  \n",
+       "529      Mogok   22.9247   96.5063  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hotel_df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hotel lat</th>\n",
+       "      <th>hotel lon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>-12.7368</td>\n",
+       "      <td>45.2068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>-20.7337</td>\n",
+       "      <td>116.845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308</th>\n",
+       "      <td>-15.1978</td>\n",
+       "      <td>12.1576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>337</th>\n",
+       "      <td>27.2152</td>\n",
+       "      <td>77.503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>20.5073</td>\n",
+       "      <td>-13.053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>444</th>\n",
+       "      <td>26.75</td>\n",
+       "      <td>33.936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>512</th>\n",
+       "      <td>38.4362</td>\n",
+       "      <td>57.4288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>529</th>\n",
+       "      <td>22.9247</td>\n",
+       "      <td>96.5063</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    hotel lat hotel lon\n",
+       "98   -12.7368   45.2068\n",
+       "160  -20.7337   116.845\n",
+       "308  -15.1978   12.1576\n",
+       "337   27.2152    77.503\n",
+       "364   20.5073   -13.053\n",
+       "444     26.75    33.936\n",
+       "512   38.4362   57.4288\n",
+       "529   22.9247   96.5063"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# NOTE: Do not change any of the code in this cell\n",
     "\n",
@@ -470,26 +842,44 @@
     "info_box_template = \"\"\"\n",
     "<dl>\n",
     "<dt>Name</dt><dd>{Hotel Name}</dd>\n",
-    "<dt>City</dt><dd>{City}</dd>\n",
-    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>City</dt><dd>{city}</dd>\n",
+    "#<dt>Country</dt><dd>{Country}</dd>\n",
     "</dl>\n",
     "\"\"\"\n",
     "# Store the DataFrame Row\n",
     "# NOTE: be sure to update with your DataFrame name\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
-    "locations = hotel_df[[\"Lat\", \"Lng\"]]"
+    "#hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
+    "locations = hotel_df[[\"hotel lat\", \"hotel lon\"]]\n",
+    "locations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ff74ff67eece45d986cee36d4bb91ddb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
+    "marker_layer = gmaps.marker_layer(locations)\n",
+    "fig.add_layer(marker_layer)\n",
     "\n",
-    "\n",
-    "# Display figure\n"
+    "# Display figure\n",
+    "fig"
    ]
   },
   {
